# basalt

./: Cargo.toml  README.md  flake.nix
src/: app.rs  compile.rs  config.rs  init.rs  magic.rs  main.rs  new.rs
