[package]
name = "basalt"
version = "0.1.0"
edition = "2021"
description = "Basalt is a set of utilities for knowledge management in the terminal."
license-file = "LICENSE"
repository = "https://github.com/GabrielDTB/basalt"
readme = "README.md"
keywords = [ "cli", "tool", "command-line", "command" ]
categories = [ "Command line utilities", "Text editors", "Text processing" ]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "wrap_help"] }
config = { version = "0.14.0", features = ["toml"] }
toml = "0.8.19"
const_format = "0.2.33"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.38"
